Fixed issues with gap in HomeProduct component

--- a/auction-app-ui/src/components/home-products/home-products.scss
+++ b/auction-app-ui/src/components/home-products/home-products.scss
@@ -6,7 +6,7 @@
   padding-top: 3rem;
   display: flex;
   width: 100%;
-  gap: 50px 29px;
+  gap: 50px 23px;
   flex-wrap: wrap;
 
   .c-item {
